Create or delete pack

--- a/src/app/molecules/image-pack/ImagePack.scss
+++ b/src/app/molecules/image-pack/ImagePack.scss
@@ -19,6 +19,7 @@
   &__footer {
     padding: var(--sp-normal);
     display: flex;
+    justify-content: space-between;
     gap: var(--sp-tight);
   }
 
