--- a/src/app/organisms/space-settings/SpaceSettings.scss
+++ b/src/app/organisms/space-settings/SpaceSettings.scss
@@ -32,7 +32,6 @@
 }
 
 .space-settings .room-permissions__card,
-.space-settings .room-members,
-.space-settings .image-pack {
+.space-settings .room-members {
   @extend .space-settings__card;
 }
