--- a/src/app/organisms/room/RoomSettings.scss
+++ b/src/app/organisms/room/RoomSettings.scss
@@ -76,7 +76,6 @@
 .room-settings .room-permissions__card,
 .room-settings .room-search__form,
 .room-settings .room-search__result-item ,
-.room-settings .room-members,
-.room-settings .image-pack {
+.room-settings .room-members {
   @extend .room-settings__card;
 }
