--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @use './app/partials/screen';
+@import '../public/font/supreme/css/supreme.css';
 
 :root {
 
@@ -131,19 +132,19 @@
 
   /* font styles: font-size, letter-spacing, line-hight */
   --fs-h1: 36px;
-  --ls-h1: 0;
+  --ls-h1: -1.5px;
   --lh-h1: 38px;
 
   --fs-h2: 24px;
-  --ls-h2: 0;
+  --ls-h2: -0.5px;
   --lh-h2: 30px;
 
   --fs-s1: 18px;
-  --ls-s1: 0;
+  --ls-s1: -0.2px;
   --lh-s1: 24px;
 
   --fs-b1: 16px;
-  --ls-b1:  0;
+  --ls-b1: 0;
   --lh-b1: 24px;
 
   --fs-b2: 14px;
@@ -156,8 +157,8 @@
 
   /* font-weight */
   --fw-light: 300;
-  --fw-normal: 400;
-  --fw-medium: 500;
+  --fw-normal: 440;
+  --fw-medium: 600;
   --fw-bold: 700;
 
 
@@ -191,9 +192,10 @@
   --fluid-push: cubic-bezier(0, 0.8, 0.67, 0.97);
   --fluid-slide-down: cubic-bezier(0.02, 0.82, 0.4, 0.96);
   --fluid-slide-up: cubic-bezier(0.13, 0.56, 0.25, 0.99);
-  
-  --font-primary: 'Public SansVariable', 'Noto Sans', sans-serif;
-  --font-secondary: 'Public SansVariable', 'Noto Sans', sans-serif;
+
+  --supreme-font: 'Supreme-Variable', 'Supreme-VariableItalic', 'Supreme-Thin', 'Supreme-ThinItalic', 'Supreme-Extralight', 'Supreme-ExtralightItalic', 'Supreme-Light', 'Supreme-LightItalic', 'Supreme-Regular', 'Supreme-Italic', 'Supreme-Medium', 'Supreme-MediumItalic', 'Supreme-Bold', 'Supreme-BoldItalic', 'Supreme-Extrabold', 'Supreme-ExtraboldItalic';
+  --font-primary: var(--supreme-font), Arial, sans-serif;
+  --font-secondary: var(--font-primary);
 }
 
 
@@ -274,17 +276,9 @@
 
   --bs-primary-border: inset 0 0 0 1px var(--bg-primary-border);
   --bs-primary-outline: 0 0 0 2px var(--bg-primary-border);
-  
-  /* font styles: font-size, letter-spacing, line-hight */
-  --fs-h1: 36px;
-  --fs-h2: 24px;
-  --fs-s1: 18px;
-  --fs-b1: 15px;
-  --fs-b2: 14px;
-  --fs-b3: 12px;
 
   /* override normal font weight for dark mode */
-  --fw-normal: 330;
+  --fw-normal: 340;
 }
 
 .dark-theme,
@@ -327,24 +321,6 @@
   font-family: var(--font-primary);
 
   /* override font styles for primary font */
-  --fs-h1: 36px;
-  --lh-h1: 38px;
-
-  --fs-h2: 24px;
-  --lh-h2: 30px;
-
-  --fs-s1: 18px;
-  --lh-s1: 24px;
-
-  --fs-b1: 16px;
-  --lh-b1: 24px;
-
-  --fs-b2: 14px;
-  --lh-b2: 20px;
-
-  --fs-b3: 12px;
-  --lh-b3: 16px;
-
   --fw-light: 400;
   --fw-normal: 500;
   --fw-medium: 600;
@@ -366,7 +342,7 @@ body {
   background-color: var(--bg-surface-low);
 
   /*Why font-variant-ligatures => https://github.com/rsms/inter/issues/222 */
-  font-variant-ligatures: no-contextual;
+  font-variant-ligatures: no-common-ligatures;
 }
 #root {
   width: 100%;
