Don't add margin to file name

--- a/src/app/molecules/message/Message.scss
+++ b/src/app/molecules/message/Message.scss
@@ -174,7 +174,7 @@
     white-space: initial !important;
   }
 
-  & p:not(:last-child) {
+  & > .text > p:not(:last-child) {
     margin-bottom: var(--sp-normal);
   }
 
