Correctly handle paragraph padding when mixed with block content

--- a/src/app/molecules/message/Message.scss
+++ b/src/app/molecules/message/Message.scss
@@ -174,8 +174,8 @@
     white-space: initial !important;
   }
 
-  & > .text > p:not(:last-child) {
-    margin-bottom: var(--sp-normal);
+  & > .text > p + p {
+    margin-top: var(--sp-normal);
   }
 
   & span[data-mx-pill] {
