--- a/src/app/organisms/room/RoomViewHeader.scss
+++ b/src/app/organisms/room/RoomViewHeader.scss
@@ -45,3 +45,10 @@
     display: none;
   }
 }
+
+.room-header__hide-navigation-btn {
+  @include dir.side(margin, 0, var(--sp-tight));
+  @include screen.smallerThan(mobileBreakpoint) {
+    display: none;
+  }
+}
