Added basic url previews

--- a/src/app/molecules/media/Media.scss
+++ b/src/app/molecules/media/Media.scss
@@ -88,3 +88,14 @@
     width: 100%;
   }
 }
+
+.embed-container {
+  color: var(--tc-surface-low);
+  background-color: var(--bg-surface-hover);
+  border-radius: calc(var(--bo-radius) / 2);
+  padding: 15px;
+
+  .embed-text {
+    margin-bottom: 5px;
+  }
+}
