--- a/src/app/molecules/media/Media.scss
+++ b/src/app/molecules/media/Media.scss
@@ -90,12 +90,16 @@
 }
 
 .embed-container {
-  color: var(--tc-surface-low);
-  background-color: var(--bg-surface-hover);
-  border-radius: calc(var(--bo-radius) / 2);
-  padding: 15px;
+  margin-top: 5px;
 
-  .embed-text {
-    margin-bottom: 5px;
+  .embed {
+    color: var(--tc-surface-low);
+    background-color: var(--bg-surface-hover);
+    border-radius: calc(var(--bo-radius) / 2);
+    padding: 15px;
+
+    .embed-text {
+      margin-bottom: 5px;
+    }
   }
 }
