--- a/src/app/templates/client/Client.scss
+++ b/src/app/templates/client/Client.scss
@@ -25,8 +25,8 @@
   top: 20rem;
   left: 55rem;
   z-index: 2000;
-  border: 1px solid gray;
-  border-radius: 5px;
+  height: 25rem;
+  width: 25rem;
 }
 
 .call_header{
@@ -39,7 +39,10 @@
 
 .call{
   user-select: none;
-  background-color: darkgray;
+  border: 1px solid var(--bg-surface-border);
+  border-radius: var(--bo-radius);
+  color: var(--tc-surface-normal-low);
+  background-color: var(--bg-surface);
 }
 
 @include screen.smallerThan(mobileBreakpoint) {
