--- a/src/app/organisms/room/JitsiRoom.scss
+++ b/src/app/organisms/room/JitsiRoom.scss
@@ -14,6 +14,10 @@
   background-color: var(--bg-surface);
 }
 
+.reset_pip {
+  transform: translate(0px) !important;
+}
+
 .call_header {
   text-align: center;
   margin-top: 1rem;
