--- a/src/app/templates/client/Client.scss
+++ b/src/app/templates/client/Client.scss
@@ -20,13 +20,12 @@
 }
 
 .jitsi_pip {
-  display: grid;
   position: absolute;
-  top: 20rem;
-  left: 55rem;
   z-index: 2000;
-  height: 25rem;
-  width: 25rem;
+  top: 50%;
+  left: 50%;
+  margin-left: -5rem;
+  margin-top: -10rem;
 }
 
 @include screen.smallerThan(mobileBreakpoint) {
