--- a/src/app/organisms/settings/Settings.scss
+++ b/src/app/organisms/settings/Settings.scss
@@ -16,8 +16,17 @@
     padding: var(--sp-loose) var(--sp-extra-loose);
   } 
 
-  & .tabs__content {
-    padding: 0 var(--sp-normal);
+  & .tabs {
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    background-color: var(--bg-surface-low);
+    box-shadow: 0 -4px 0 var(--bg-surface-low),
+      inset 0 -1px 0 var(--bg-surface-border);
+
+    &__content {
+      padding: 0 var(--sp-normal);
+    }
   }
 
   &__cards-wrapper {
