sidebar navigation - WIP

--- a/src/app/templates/client/Client.scss
+++ b/src/app/templates/client/Client.scss
@@ -3,11 +3,12 @@
 .client-container {
   display: flex;
   height: 100%;
+  flex-grow: 1;
 }
 
 .navigation__wrapper {
   width: var(--navigation-width);
-  
+
   @include screen.smallerThan(mobileBreakpoint) {
     width: 100%;
   }
