--- a/src/index.scss
+++ b/src/index.scss
@@ -402,6 +402,7 @@ textarea {
   margin: 0;
   padding: 0;
   background-color: transparent;
+  color: inherit;
   font-family: inherit;
   font-size: inherit;
   font-weight: inherit;
